[package]
name = "bank"
version = "0.2.0"
edition = "2021"
description = "A command-line utility that combines the functionality of mkdir and touch"
license = "MIT"
authors = ["The ELCI Group"]
repository = "https://github.com/your-username/npxr"
homepage = "https://github.com/your-username/npxr"
keywords = ["cli", "filesystem", "utility", "mkdir", "touch"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "bank"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
